Fix button font and text-overflow for showname(MovieCard)

--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -27,6 +27,10 @@
     font-weight: 600;
     letter-spacing: 0;
     text-align: left;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 400px;
+    white-space: nowrap;
 }
 .movie-time-and-auditorium {
     display: flex;
